# SignalingServer

./: CMakeLists.txt  GBTask.h  MsgContentXml.cpp  MsgContentXml.h  MyB2BSvMgr.h  MySqlDb.cxx  MySqlDb.hxx  README.md  RegistServer.cpp  RegistServer.h  RtpPortManager.cpp  RtpPortManager.h  SipExtensionInfo.h  SipServer.cpp  SipServer.h  SipServer.sln  SipServer.vcxproj  SipServer.vcxproj.filters  SipServerConfig.cpp  SipServerConfig.h  SqliteDb.cpp  SqliteDb.h  UaClientCall.cpp  UaClientCall.h  UaMessageMgr.cpp  UaMessageMgr.h  Ualink.cpp  Ualink.h  UserAgentMgr.cpp  UserAgentMgr.h  XmlMsgAnalysis.cpp  XmlMsgAnalysis.h  build.sh  gb28181_install.sh  gb28181_yixin_install.sh  http.cpp  http.h  main.cpp  mongoose.c  mongoose.h  (+3 more)
Debug/: SipServer.exe.recipe  useragentmgr.obj.enc  vc142.idb
Debug/SipServer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SipServer.lastbuildstate  SipServer.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
MediaMng/: MediaIn.h  MediaMng.h  MediaStream.cpp  MediaStream.h
Plugin/: PluginInterface.h  PluginMacro.h
Plugin/vsk/x86Nvr/: JsonDevice.cpp  jsonSdkInterface.cpp  jsonSdkInterface.h
Plugin/vsk/x86Nvr/Release/: main_jsonsdk.cpp  sdkJson.lib
Plugin/vsk/x86Nvr/include/: CErrorCode.h  CustomCommon.h  SdkCommon.h  Type.h  VskClientSdkJson.h  base64.cpp  base64.h
RegistrarServer/: AbstractDb.cxx  AbstractDb.hxx  AccountingCollector.cxx  AccountingCollector.hxx  Ack200DoneMessage.hxx  AclStore.cxx  AclStore.hxx  AsyncProcessor.hxx  AsyncProcessorMessage.hxx  AsyncProcessorWorker.hxx  AuthenticatorFactory.hxx  BasicWsConnectionValidator.cxx  BasicWsConnectionValidator.hxx  BridgeMixer.h  CertificateAuthenticator.cxx  CertificateAuthenticator.hxx  ConfigStore.cxx  ConfigStore.hxx  ConversationManager.h  DigestAuthenticator.cxx  DigestAuthenticator.hxx  FilterStore.cxx  FilterStore.hxx  ForkControlMessage.hxx  HandleTypes.h  IsTrustedNode.cxx  IsTrustedNode.hxx  MediaEvent.h  MediaResourceCache.h  MyMessageDecorator.cxx  MyMessageDecorator.hxx  PersistentMessageQueue.cxx  PersistentMessageQueue.hxx  Processor.cxx  Processor.hxx  ProcessorChain.cxx  ProcessorChain.hxx  ProcessorMessage.hxx  Proxy.cxx  Proxy.hxx  (+42 more)
SipServer/: AbstractDb.cxx  AccountingCollector.cxx  AclStore.cxx  AclStore.hxx  AsyncProcessor.hxx  AsyncProcessorMessage.hxx  AsyncProcessorWorker.hxx  AuthenticatorFactory.hxx  BasicWsConnectionValidator.cxx  BridgeMixer.h  CertificateAuthenticator.cxx  CertificateAuthenticator.hxx  ConfigStore.cxx  ConfigStore.hxx  ConversationManager.h  DigestAuthenticator.cxx  DigestAuthenticator.hxx  FilterStore.cxx  FilterStore.hxx  ForkControlMessage.hxx  HandleTypes.h  IsTrustedNode.cxx  IsTrustedNode.hxx  MediaEvent.h  MediaResourceCache.h  PersistentMessageQueue.cxx  PersistentMessageQueue.hxx  Processor.cxx  ProcessorChain.cxx  ProcessorChain.hxx  ProcessorMessage.hxx  Proxy.cxx  Proxy.hxx  ProxyConfig.hxx  RADIUSAuthenticator.cxx  RADIUSAuthenticator.hxx  RRDecorator.cxx  Registrar.cxx  ReproAuthenticatorFactory.cxx  ReproRADIUSServerAuthManager.cxx  (+27 more)
UserAgent/: GB28181Msg.cpp  GB28181Msg.h  SubscriptionMrg.cpp  SubscriptionMrg.h  UaClientCall.cpp  UaClientCall.h  UaMessageMgr.cpp  UaMessageMgr.h  UserAgentMgr.cpp  UserAgentMgr.h
conf/: UserSetting.h
db/mysql/: MySqlDb.cxx  MySqlDb.hxx
device/: CatalogData.h  DeviceChannel.cpp  DeviceChannel.h  DeviceDbManager.cpp  DeviceDbManager.h  DeviceInfo.cpp  DeviceInfo.h  DeviceInterface.h  DeviceManager.cpp  DeviceManager.h  ParentPlatformDbManager.cpp  ParentPlatformDbManager.h
deviceDb/: dbManager.cpp  dbManager.h
deviceMng/: BaseDevice.h  BaseMediaIn.h  JsonDevice.cpp  JsonDevice.h  VirtualOrganization.h  deviceMng.cpp  deviceMng.h
install/: gb28181_yixin_install.sh
lib/libcurl/win/: libcurld.lib
lib/rapidjson/: myjsondef.h  rapidjson.h
lib/resip/win/: GeoIP.lib  ares.lib  fmt.lib  pcre.lib  popt.lib
localMediaServer/: IMediaServerService.cpp  IMediaServerService.h  MediaConfig.h  MediaDbManager.cpp  MediaDbManager.h  MediaServerItem.h  SSRCInfo.h  SsrcConfig.h  StreamInfo.h  ZLMRTPServerFactory.h  ZLMServerConfig.h  localMediaServerInterface.cpp  localMediaServerInterface.h  zlmHttpInterface.h
media/: MediaMng.cpp  MediaMng.h  MediaStream.cpp  MediaStream.h  avCache.h  avpacket-queue.cpp  avpacket-queue.h  ffmpeg-file-source.cpp  ffmpeg-file-source.h  ffmpeg-live-source.cpp  ffmpeg-live-source.h  h264-file-reader.cpp  h264-file-reader.h  h264-file-source.cpp  h264-file-source.h  h265-file-reader.cpp  h265-file-reader.h  h265-file-source.cpp  h265-file-source.h  media-source.h  mp4-file-reader.cpp  mp4-file-reader.h  mp4-file-source.cpp  mp4-file-source.h  pcm-file-source.cpp  pcm-file-source.h  ps-file-source.cpp  ps-file-source.h  rtp-tcp-transport.h  rtp-udp-transport.cpp  rtp-udp-transport.h  videoNalu.hpp  vod-file-source.cpp  vod-file-source.h
media/mediaIn/: JsonStream.cpp  JsonStream.h  Stream.h
media/rtp/: receiver_rtp.cpp  receiver_rtp.h  send_rtp.cpp  send_rtp.h
media/rtp/lib/: libflv.idb  libflv.lib  libmov.idb  libmov.lib  libmpeg.idb  libmpeg.lib  librtp.idb  librtp.lib
mySipServer/: MyClientRegistHandler.cpp  MyClientRegistHandler.h  SipServerAuthManager.cpp  SipServerAuthManager.h
sesssion/: SendRtpItem.h  SsrcTransaction.h  VideoStreamSessionManager.h
stateAgents/: CertPublicationHandler.cxx  CertServer.cxx  CertServer.hxx  CertSubscriptionHandler.cxx  PresencePublicationHandler.cxx  PresenceServer.cxx  PresenceServer.hxx  PresenceSubscriptionHandler.cxx  PrivateKeyPublicationHandler.cxx  PrivateKeySubscriptionHandler.cxx
tools/: CMakeLists.txt  CTask.h  CodeConversion.cpp  CodeConversion.h  CodeConvert.cpp  CodeConvert.h  InitFile.h  KMP.cpp  KMP.h  SafeQueue.h  SelfLog.cpp  SelfLog.h  ThreadPool.cpp  ThreadPool.h  TypeConversion.cpp  TypeConversion.h  any.cpp  any.h  avFrame.cpp  avFrame.h  base64.cpp  base64.h  genuuid.cpp  genuuid.h  iThreadPool.cpp  iThreadPool.h  lineBuf.cpp  lineBuf.h  m_Time.cpp  m_Time.h  memPool.cpp  memPool.h  ownString.cpp  ownString.h  unLockQueue.h
ws/: ws.cpp  ws.h
(+62 files in other folders)
